--- a/securitylibrary/SecurityLibrary.csproj
+++ b/securitylibrary/SecurityLibrary.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SecurityLibrary</RootNamespace>
     <AssemblyName>SecurityLibrary</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AES\AES.cs" />
+    <Compile Include="AES\Constants.cs" />
     <Compile Include="AES\ExtendedEuclid.cs" />
     <Compile Include="ElGamal\ELGAMAL.cs" />
     <Compile Include="ICryptographic_Technique.cs" />
